# csv-to-jsonld-processor

./: .gitignore  Cargo.toml  notes.txt
csv-to-jsonld-cli/: Cargo.toml
csv-to-jsonld-cli/src/: main.rs  manifest.rs
csv-to-jsonld-cli/tests/: cli_tests.rs
csv-to-jsonld-lib/: Cargo.toml
csv-to-jsonld-lib/src/: lib.rs
csv-to-jsonld-lib/src/error/: mod.rs
csv-to-jsonld-lib/src/excel/: mod.rs
csv-to-jsonld-lib/src/instance/: mod.rs  processor.rs  processor_impl.rs  serializer.rs  types.rs  validation.rs  value_processor.rs
csv-to-jsonld-lib/src/manifest/: mod.rs  template.rs
csv-to-jsonld-lib/src/processor/: mod.rs
csv-to-jsonld-lib/src/types/: csv.rs  instance.rs  mod.rs  vocabulary.rs
csv-to-jsonld-lib/src/utils/: mod.rs
csv-to-jsonld-lib/src/vocabulary/: mapping.rs  mod.rs  processor.rs  serializer.rs
test-data/: instances-updated.jsonld  instances.jsonld  manifest-bom.jsonld  manifest-slim.jsonc  manifest-slim.jsonld  manifest-total.jsonc  manifest.jsonc  manifest.jsonld  vocabulary-updated.jsonld  vocabulary.jsonld
test-data/instances/: BillOfMaterials.csv  Material.csv  MaterialFeatureValues.csv  WarehouseInventory.csv  bill_of_materials.csv  material_instances_with_properties.csv  products.csv
test-data/model/: DataModel.csv  MaterialFeatures.csv  main.csv  material_class_values_list.csv  material_features.csv
