[workspace]
members = ["csv-to-jsonld-lib", "csv-to-jsonld-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
description = "A tool for converting CSV files to JSON-LD based on a manifest specification"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
