[package]
name = "csv-to-jsonld-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = "0.4.39"
uuid = { version = "1.11.0", features = ["v4"] }
regex = "1.11.1"
json_comments = "0.2.2"
url = "2.5.4"

[lib]
name = "csv_to_jsonld"
crate-type = ["cdylib", "rlib"] # Support both wasm and rust library
